        - Fix count of grouped resultsets using HAVING with aliases
        - Setting belongs_to columns/relationships no longer leaves the
          FK value and related object out of sync
        - Stop stripping newlines from SQL statements in the limit emulators
          as it is possible that custom sql with comments was provided
        - Add forgotten attributes to Admin.pm

    * Misc
        - Add extra option groups to DBIC::Optional::Depencencies, to aid
          users in requesting the prerequisites for a particular RDBMS
        - Switch all serialization to use Storable::nfreeze for portable
          architecture independent ice
        - Fix the bogus META.yml dependency injection issue for good
        - Refactor DBIx::Class::Storage::Statistics::debugfh() to be lazy

0.08124 2010-10-28 14:23 (UTC)
    * New Features / Changes
        - Add new -ident "function" indicating rhs is a column name
          { col => { -ident => 'othercol' } } vs { col => \'othercol' }
        - Extend 'proxy' relationship attribute
        - Use DBIx::Class::Storage::Debug::PrettyPrint when the
          environment variable DBIC_TRACE_PROFILE is set, see
          DBIx::Class::Storage for more information
        - Implemented add_unique_constraints() which delegates to
          add_unique_constraint() as appropriate
        - add_unique_constraint() now poparly throws if called with
          multiple constraint definitions
        - No longer depend on SQL::Abstract::Limit - DBIC has been doing
          most of the heavy lifting for a while anyway
        - FilterColumn now passes data through when transformations
          are not specified rather than throwing an exception.
        - Optimized RowNum based Oracle limit-dialect (RT#61277)
        - Requesting a pager on a resultset with cached entries now
          throws an exception, instead of returning a 1-page object
          since the amount of rows is always equal to the "pagesize"